# ZenLang

./: .editorconfig  .gitignore  1  Cargo.toml  README.md  a.sh  a.zen  a.zenc  fib.zen  flake.nix  iter.zen
zenlang/: Cargo.toml
zenlang/src/: compiler.rs  environment.rs  func_attr.rs  lib.rs  module.rs  opcode.rs  parser.rs  rawvec.rs  scope.rs  state.rs  stdlib.rs  tokenizer.rs  value.rs  vm.rs  vmcall.rs
zenlang/src/ast/: array.rs  array_assign.rs  array_index.rs  binop.rs  block.rs  boolean.rs  break_stmt.rs  closure.rs  continue_stmt.rs  defer.rs  dict.rs  dynmod_stmt.rs  elif_stmt.rs  else_stmt.rs  func_call.rs  function.rs  global_var.rs  if_chain.rs  if_stmt.rs  lambda.rs  mod.rs  mod_stmt.rs  node.rs  null.rs  number.rs  ret.rs  root.rs  string.rs  var_assign.rs  var_ref.rs  vmcall.rs  while_stmt.rs
zenlang/src/interop/: mod.rs
zenlang/src/parser/: block.rs  error.rs  expression.rs  func.rs  if_chain.rs  mod.rs  parser.rs  parser_block.rs  parser_error.rs  parser_expr.rs  parser_func.rs  parser_if_chain.rs  parser_prec.rs  parser_stmt.rs  statement.rs  while.rs
zenlang/src/platform/: platform.rs
zenlang/src/unescape/: mod.rs
zenlang/src/vm/: global_state.rs  mod.rs  vm.rs  (+7 more)
zenlang/tests/: compiler.rs  compiler_func_attrs.rs  helpers.rs  rawvec.rs  tokenizer.rs  type_hints.rs  vm.rs  vm_array.rs  vm_bitops.rs  vm_closure.rs  vm_cmp.rs  vm_defer.rs  vm_dict.rs  vm_environ.rs  vm_gc.rs  vm_global.rs  vm_if.rs  vm_if_let.rs  vm_lambda.rs  vm_op_str.rs  vm_ref.rs  vm_self.rs  vm_stdlib.rs  vm_string_index.rs  vm_this.rs  vm_unique.rs  vm_while.rs
(+56 files in other folders)
