[package]
name = "zenlang"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = "0.2.15"
serde = { version = "1.0.225", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "2.0", default-features = false, features = ["alloc", "serde", "derive"] }

[features]
default = ["std"]
std = []
